# CodingExercises

./: 7Up7Down.cpp  AreaAndVolume.cpp  BubbleSort.cpp  CMakeLists.txt  Circle.py  DivisibleBySix.cpp  LongestPrefix.py  MathSeries.cpp  MyFirstCode.cpp  OneToTen.cpp  OperationsWithNumbers.py  Palindrome.cpp  PrintDigits.cpp  PrintPatternX.cpp  SumUpToTen.cpp  ThreeInts.cpp  TwoNumbers.cpp  TwoSum.cpp  WordCounter.cpp
